--- a/src/pages/components.html
+++ b/src/pages/components.html
@@ -14,6 +14,20 @@
 			<h2 style="text-align: center; padding-bottom: 15px;">
 				Компонент 1
 			</h2>
+			<div style="display: flex; align-items: center; justify-content: flex-start; gap:15px; flex-wrap: wrap;">
+				<button class="btn">
+					button
+				</button>
+				<button class="btn-br">
+					button border
+				</button>
+				<a href="#" class="link">
+					link
+				</a>
+				<a href="#" class="link-blue">
+					link-blue
+				</a>
+			</div>
 		</li>
 		<li>
 			<h2 style="text-align: center; padding-bottom: 15px;">
