--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,15 +6,16 @@
 )
 
 <body>
-	@@include("../assets/components/header/header.html" )
-	<main
-		style="display:flex; align-items:center; justify-content:center;padding:0; margin:0;  height:100vh; background:black; font-size:100px; text-align:center; color:#fff;">
-		HELLO WORLD
-		<div class="">
-			<img src="assets/img/main-back.png" alt="">
-		</div>
-	</main>
-	@@include("../assets/components/footer/footer.html")
+	<div class="page">
+		@@include("../assets/components/header/header.html" )
+		<main>
+			@@include("../html/index/main.html" )
+
+
+		</main>
+		@@include("../assets/components/footer/footer.html")
+	</div>
+
 	<script src="assets/js/app.min.js"></script>
 </body>
 
