--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -10,8 +10,11 @@
 		@@include("../assets/components/header/header.html" )
 		<main>
 			@@include("../html/index/main.html" )
-
-
+			@@include("../html/index/slogan.html" )
+			@@include("../html/index/materials.html" )
+			@@include("../html/index/news.html" )
+			@@include("../html/index/become.html" )
+			@@include("../html/index/partners.html" )
 		</main>
 		@@include("../assets/components/footer/footer.html")
 	</div>
