add page events

--- a/src/pages/pages-list.html
+++ b/src/pages/pages-list.html
@@ -27,6 +27,12 @@
 							Главная страница
 						</a>
 					</li>
+					<li>
+						<a href="events.html" target="_blank" aria-label="Главная страница"
+							style="font-size: 18px; font-weight: 500; line-height: 140%; text-align: center; color:black; text-decoration: underline;">
+							Мероприятия
+						</a>
+					</li>
 				</ul>
 			</li>
 
