--- a/src/pages/events.html
+++ b/src/pages/events.html
@@ -10,7 +10,12 @@
 		@@include("../assets/components/header/header.html" )
 		<main>
 			@@include("../html/index/main.html" )
-			@@include("../html/index/slogan.html" )
+			@@include("../html/events/slogan.html" )
+			@@include("../html/events/documents.html" )
+			@@include("../html/events/maps.html" )
+			@@include("../html/events/registration.html" )
+			@@include("../html/events/organizers.html" )
+			@@include("../html/events/boost.html" )
 		</main>
 		@@include("../assets/components/footer/footer.html")
 	</div>
