--- a/src/pages/events.html
+++ b/src/pages/events.html
@@ -9,7 +9,7 @@
 	<div class="page">
 		@@include("../assets/components/header/header.html" )
 		<main>
-			@@include("../html/index/main.html" )
+			@@include("../html/events/main.html" )
 			@@include("../html/events/slogan.html" )
 			@@include("../html/events/documents.html" )
 			@@include("../html/events/maps.html" )
