--- a/src/pages/pages-list.html
+++ b/src/pages/pages-list.html
@@ -33,6 +33,12 @@
 							Мероприятия
 						</a>
 					</li>
+					<li>
+						<a href="moir.html" target="_blank" aria-label="Главная страница"
+							style="font-size: 18px; font-weight: 500; line-height: 140%; text-align: center; color:black; text-decoration: underline;">
+							демография
+						</a>
+					</li>
 				</ul>
 			</li>
 
