--- a/src/pages/moir.html
+++ b/src/pages/moir.html
@@ -13,9 +13,10 @@
 			@@include("../html/moir/nearest.html" )
 			@@include("../html/moir/website.html" )
 			@@include("../html/moir/flagship.html" )
-
+			@@include("../html/moir/about.html" )
+			@@include("../html/moir/uncos.html" )
 		</main>
-		@@include("../assets/components/footer/footer.html")
+		@@include("../assets/components/footer/footer-moir.html")
 	</div>
 
 	<script src="assets/js/app.min.js"></script>
